    without spaces

2010-04-27 Version 0.3.7

  * force CR/LF pairs in batch commands instead of LF only end-of-line.

2010-05-08 Version 0.3.8

  * added function parameter tooltips
  * fix: resource files would not be updated when used with tool "Auto"
  * fix: custom built files always added to linker command line
  * fix: fixed initialization exception when no windows-SDK installed
  * fix: build only worked as admin on x64
  * fix: spurious crashes on x64
  * improved WindowsApp project template (added libs, sets application subsystem)

2010-05-28 Version 0.3.9

  * new file/symbol search window
  * word-completion can now be expanded to symbol lookup by pressing Ctrl-Space again
  * installation now reenables package, in case you told VS to skip loading it
  * now using machine-translated SDK instead of std.windows
  * fixed COM leak
  * fix: file opened through "goto definition"/"find in files" sometimes warns
    "already opened in editor"
  * fix: "goto error" sometimes would not jump to error with message 
    "cannot find the file specified"
  * fix: last version would not let you select any but the first entry of an
    expansion list
  * symbol information now updated after project load, it's no longer necessary
    to build once

2010-06-03 Version 0.3.10

  * updated to cv2pdb 0.13 which allows debugging under plain VS2010 and is
    more stable when evaluating arrays in the debugger
  * now built with debug symbols to allow crash analysis. See
    [downloads/visuald_pdb.zip] for symbols for the latest version
  * fix: project property dialog did not popup with saved D version
  * added the possibility to stop a build
  * new logo now used in about box

2010-06-05 Version 0.3.11

  * error messages now forwarded to error list
  * Visual D settings now stored in the user area of the registry
  * added library search path to project settings (you need to append ";%LIB%" to
    the LIB setting in DMD's sc.ini for this to work)
