@@ -1,7 +1,11 @@
 "g_commandSetCLSID:CmdSearchFile"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x03, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x102
 "g_commandSetCLSID:CmdSearchSymbol"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x03, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x101
+"g_commandSetCLSID:CmdShowScope"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x03, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x103
 "g_packageCLSID"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x7f, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }
+"g_packageCLSID:IDG_VD_EDIT"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x7f, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x0101
+"g_packageCLSID:IDG_VD_SEARCH"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x7f, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x0100
+"g_packageCLSID:IDM_VISUALD"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x7f, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x0001
 "guidOfficeIcon:msotcidNoIcon"={ 0xd309f794, 0x903f, 0x11d0, { 0x9e, 0xfc, 0x00, 0xa0, 0xc9, 0x11, 0x00, 0x4f } }:746
-"guidSHLMainMenu:IDG_VS_WNDO_FINDRESULTS"={ 0xd309f791, 0x903f, 0x11d0, { 0x9e, 0xfc, 0x00, 0xa0, 0xc9, 0x11, 0x00, 0x4f } }:0x0724
+"guidSHLMainMenu:IDG_VS_MM_FILEEDITVIEW"={ 0xd309f791, 0x903f, 0x11d0, { 0x9e, 0xfc, 0x00, 0xa0, 0xc9, 0x11, 0x00, 0x4f } }:0x0101
 
 
